src/tests/ci/assignment_5_functions/valid/02_double_declaration.c
int add(int a, int b);

int add(int a, int b) {
    return a + b;
}

int main() {
    int x = add(5, 3);
    int y = add(5,7);
    return 0;
}