src/tests/ci/assignment_5_functions/invalid_semantic/16_function_too_few_args.c
int multiply(int a, int b, int c) {
    return a * b * c;
}

int main() {
    int result = multiply(2, 3);  // 2 args, expects 3
    return result;
}